Lumen scalability settings for EA build to give users a starting point for their project's Lumen scalability settings  * Low & Medium = Lumen off  * High = Lumen 60fps settings  * Epic = Lumen 30fps settings  * Cinematic = same as Epic
Added r.Lumen.TraceMeshSDFs.Allow for scalability to drive, separate from r.Lumen.TraceMeshSDFs which is the project setting
Removed redundant setting in AncientGame ini preventing scalability cvars from working

In LumenReflectiveTest on 2080TI at 1440p:
Medium / High / Epic
.63ms / 4.34ms / 7.2ms

#ROBOMERGE-SOURCE: CL 16379710 in //UE5/Release-5.0-EarlyAccess/...
#ROBOMERGE-BOT: STARSHIP (Release-5.0-EarlyAccess -> Main) (v804-16311228)

[CL 16379758 by daniel wright in ue5-main branch]

--- a/Engine/Config/BaseScalability.ini
+++ b/Engine/Config/BaseScalability.ini
@@ -412,6 +412,8 @@ r.SkyAtmosphere.TransmittanceLUT.SampleCount=10.0
 r.SkyAtmosphere.MultiScatteringLUT.SampleCount=15.0
 r.SkyLight.RealTimeReflectionCapture=0
 fx.Niagara.QualityLevel=0
+r.Lumen.DiffuseIndirect.Allow=0
+r.Lumen.Reflections.Allow=0
 
 [EffectsQuality@1]
 r.TranslucencyLightingVolumeDim=32
@@ -443,6 +445,8 @@ r.SkyAtmosphere.TransmittanceLUT.SampleCount=10.0
 r.SkyAtmosphere.MultiScatteringLUT.SampleCount=15.0
 r.SkyLight.RealTimeReflectionCapture=0
 fx.Niagara.QualityLevel=1
+r.Lumen.DiffuseIndirect.Allow=0
+r.Lumen.Reflections.Allow=0
 
 [EffectsQuality@2]
 r.TranslucencyLightingVolumeDim=48
@@ -474,6 +478,15 @@ r.SkyAtmosphere.TransmittanceLUT.SampleCount=10.0
 r.SkyAtmosphere.MultiScatteringLUT.SampleCount=15.0
 r.SkyLight.RealTimeReflectionCapture=1
 fx.Niagara.QualityLevel=2
+r.Lumen.DiffuseIndirect.Allow=1
+r.Lumen.Reflections.Allow=1
+r.Lumen.TranslucencyVolume.GridPixelSize=64
+r.Lumen.Radiosity=0
+r.Lumen.TraceMeshSDFs.Allow=0
+r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=16
+r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=0
+r.Lumen.ScreenProbeGather.DownsampleFactor=32
+r.Lumen.Reflections.DownsampleFactor=2
 
 [EffectsQuality@3]
 r.TranslucencyLightingVolumeDim=64
@@ -505,6 +518,15 @@ r.SkyAtmosphere.TransmittanceLUT.SampleCount=10.0
 r.SkyAtmosphere.MultiScatteringLUT.SampleCount=15.0
 r.SkyLight.RealTimeReflectionCapture=1
 fx.Niagara.QualityLevel=3
+r.Lumen.DiffuseIndirect.Allow=1
+r.Lumen.Reflections.Allow=1
+r.Lumen.TranslucencyVolume.GridPixelSize=32
+r.Lumen.Radiosity=1
+r.Lumen.TraceMeshSDFs.Allow=1
+r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=32
+r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=1
+r.Lumen.ScreenProbeGather.DownsampleFactor=16
+r.Lumen.Reflections.DownsampleFactor=1
 
 [EffectsQuality@Cine]
 r.TranslucencyLightingVolumeDim=64
@@ -536,6 +558,15 @@ r.SkyAtmosphere.TransmittanceLUT.SampleCount=30.0
 r.SkyAtmosphere.MultiScatteringLUT.SampleCount=20.0
 r.SkyLight.RealTimeReflectionCapture=1
 fx.Niagara.QualityLevel=4
+r.Lumen.DiffuseIndirect.Allow=1
+r.Lumen.Reflections.Allow=1
+r.Lumen.TranslucencyVolume.GridPixelSize=32
+r.Lumen.Radiosity=1
+r.Lumen.TraceMeshSDFs.Allow=1
+r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=32
+r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=1
+r.Lumen.ScreenProbeGather.DownsampleFactor=16
+r.Lumen.Reflections.DownsampleFactor=1
 
 ;-----------------------------------------------------------------------------------------------------------------
 
