Updating translation for ja #jira none
[CL 16384929 by Yali He in 4.27 branch]

--- a/Templates/TP_AEC_ProdConfigBP/manifest.json
+++ b/Templates/TP_AEC_ProdConfigBP/manifest.json
@@ -14,6 +14,10 @@
 			"Language": "zh-Hans",
 			"Text": "设计配置器"
 		}
+		{
+			"Language": "ja",
+			"Text": "デザインコンフィギュレーター"
+		}
 	],
 	"Description":
 	[
@@ -31,7 +35,7 @@
 		},
 		{
 			"Language": "ja",
-			"Text": "このプロジェクト テンプレートでは、Variant Manager、UMG、ブループリントを利用して、汎用的な製品コンフィギュレーターを構築できます。\n\nユーザーインターフェイスは、3D モデルとレベル内に表示されているバリアントから動的に作成されるため、ユーザーは、あらかじめ備わっているモデルをユーザー作成によるアセットと交換し、コンフィギュレーターの UI をその新たなデータに適合させることができます。"
+			"Text": "このプロジェクト テンプレートは Variant Manager、UMG、ブループリントを使用して、様々なオブジェクトの可視性の切替、アニメーション シーケンスの呼び出し、視点の変更、デザイン設定の切替ができるプロジェクトを構築するものです。ユーザーインターフェイスは、3D モデルとレベル内に表示されているバリアントから動的に作成されます。これにより、あらかじめ備わっているモデルをユーザー作成によるアセットと交換すれば、コンフィギュレーターの UI はその新たなデータに適合します。"
 		}
 	],
 	"AssetTypes": [],
