A modeling tools mode that integrates into the skeletal mesh editor. It provides a subset of the modeling tools to the skeletal mesh editor, including the bone weights paint and bind tool.
#jira UE-93689
#preflight 60a524b0f94e3c0001cd462d

[CL 16390446 by halfdan ingvarsson in ue5-main branch]

--- a/Engine/Plugins/Experimental/Optimus/Optimus.uplugin
+++ b/Engine/Plugins/Experimental/Optimus/Optimus.uplugin
@@ -28,7 +28,23 @@
 		{
 			"Name": "OptimusEditor",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "OptimusTools",
+			"Type": "Editor",
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms": [ "Win64" ]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "MeshModelingToolset",
+			"Enabled": true
+		},
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
 		}
 	]
 }
