Fix misnamed enum that is not initialized #rb trivial #jira UE-113950 #preflight 60a55aac0569f30001f05080
[CL 16390795 by Rob Gay in ue5-main branch]

--- a/Engine/Plugins/Runtime/AudioModulation/Config/BaseAudioModulation.ini
+++ b/Engine/Plugins/Runtime/AudioModulation/Config/BaseAudioModulation.ini
@@ -1,3 +1,6 @@
+[CoreRedirects]
++EnumRedirects=(OldName="FSoundModulationLFOShape",NewName="ESoundModulationLFOShape")
+
 [/Script/AudioModulation.AudioModulationSettings]
 +Parameters=/AudioModulation/BitDepth.BitDepth
 +Parameters=/AudioModulation/HPFCutoffFrequency.HPFCutoffFrequency
