--- a/Templates/TP_AEC_ProdConfigBP/manifest.json
+++ b/Templates/TP_AEC_ProdConfigBP/manifest.json
@@ -8,7 +8,7 @@
 		},
 		{
 			"Language": "ko",
-			"Text": "제품 컨피규레이터"
+			"Text": "디자인 컨피규레이터"
 		},
 		{
 			"Language": "zh-Hans",
@@ -27,7 +27,7 @@
 		},
 		{
 			"Language": "ko",
-			"Text": "이 프로젝트 템플릿은 일반적인 제품 컨피규레이터 제작을 위해 베리언트 매니저, UMG 그리고 블루프린트를 활용합니다.\n\n유저 인터페이스는 3D 모델과 레벨 내 베리언트를 기반으로 다이내믹하게 생성됩니다. 이를 통해 사용자들은 제공된 모델을 직접 제작한 애셋과 교체하는 것만으로 새로운 데이터에 맞는 컨피규레이터 UI를 사용할 수 있습니다."
+			"Text": "이 프로젝트 템플릿은 베리언트 매니저, UMG와 블루프린트를 사용한 프로젝트로 가시성,  애니메이션 시퀀스 트리거, 뷰 모드 또는 다양한 디자인 옵션 간의 전환 등과 같이 다른 오브젝트 스테이트를 전환할 수 있습니다. 유저 인터페이스는 레벨 내 3D 모델과 베리언트를 기반으로 동적으로 생성됩니다. 이를 통해 사용자들은 기본 제공된 모델을 직접 제작한 에셋과 교체하고 새로운 데이터에 맞게 컨피규레이터 UI를 업데이트할 수 있습니다."
 		},
 		{
 			"Language": "zh-Hans",
