Pipeline workflows prototype. This is a first implementation of the interchange pipeline selection workflow when users import files with interchange. - Interchange per project settings allow user to create pipeline stacks and to override the pipeline selector UI - First draft of the generic pipeline selector UI dialog - Pipeline settings are saved in the config ini files - The importAssetData now contains the pipelines settings so we can reuse the same settings when we will do the re import
#jira UETOOL-3440
#rb julien.stjean

[CL 16416864 by Alexis Matte in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2789,7 +2789,10 @@ bDisableActionLimit=false
 ActionLimit=100
 
 [/Script/InterchangeEngine.InterchangeProjectSettings]
-PipelineStack=/Script/InterchangePipelines.InterchangeGenericAssetsPipeline
+PipelineStacks=(("Generic", (Pipelines=("/Script/InterchangePipelines.InterchangeGenericAssetsPipeline"))))
+DefaultPipelineStack=Generic
+PipelineConfigurationDialogClass=/Script/InterchangeEditorPipelines.InterchangePipelineConfigurationGeneric
+bShowPipelineStacksConfigurationDialog=True
 
 [AlternateTextureCompression]
 TextureCompressionFormat="TextureFormatOodle"
