Put RemoteControlCommon back to Editor it is dependent on editor only types. [CODEREVIEW] George.Rolfe, Simon Therriault #rb #rnx #jira
#ROBOMERGE-SOURCE: CL 16426034 in //UE4/Release-4.27/... via CL 16426069
#ROBOMERGE-BOT: STARSHIP (Main -> Release-Engine-Staging) (v811-16416015)

[CL 16426101 by marc audy in ue5-release-engine-staging branch]

--- a/Engine/Plugins/VirtualProduction/RemoteControl/RemoteControl.uplugin
+++ b/Engine/Plugins/VirtualProduction/RemoteControl/RemoteControl.uplugin
@@ -41,7 +41,7 @@
 		},
 		{
 			"Name": "RemoteControlCommon",
-			"Type": "Runtime",
+			"Type": "Editor",
 			"LoadingPhase": "Default"
 		},
 		{
