Simplify DataDrivenShaderPlatform logic in IsHairStrandsGeometrySupported by changing bSupportsHairStrandGeometry to an opt-in setting. Enable the setting on the corresponding console and PC platforms (console platforms were set in previous CLs).
#jira UE-106915
#rb Rolando.Caloca David.Harvey Charles.deRousiers
#rnx

[CL 16436710 by brian white in 4.27 branch]

--- a/Engine/Config/Windows/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Windows/DataDrivenPlatformInfo.ini
@@ -129,6 +129,7 @@ bSupportsWaveOperations=false
 bSupportsGPUScene=true
 bSupportsAnisotropicMaterials=true
 bSupportsVariableRateShading=true
+bSupportsHairStrandGeometry=true
 
 
 [ShaderPlatform VULKAN_SM5]
@@ -224,3 +225,5 @@ bIsHlslcc = false
 bSupportsVariableRateShading = false
 
 NumberOfComputeThreads = 64
+
+bSupportsHairStrandGeometry=true
