Simplify DataDrivenShaderPlatform logic in IsHairStrandsGeometrySupported by changing bSupportsHairStrandGeometry to an opt-in setting. Enable the setting on the corresponding console and PC platforms (console platforms were set in previous CLs).
#jira UE-106915
#rb Rolando.Caloca David.Harvey Charles.deRousiers
#rnx

#ROBOMERGE-OWNER: brian.white
#ROBOMERGE-AUTHOR: brian.white
#ROBOMERGE-SOURCE: CL 16436710 in //UE4/Release-4.27/... via CL 16436714
#ROBOMERGE-BOT: STARSHIP (Main -> Release-Engine-Staging) (v814-16434418)
#ROBOMERGE-CONFLICT from-shelf

[CL 16437236 by brian white in ue5-release-engine-staging branch]

--- a/Engine/Config/Windows/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Windows/DataDrivenPlatformInfo.ini
@@ -80,6 +80,7 @@ bSupportsGPUSkinCache=true
 bSupportsGen5TemporalAA=true
 bSupportsMeshShaders=true
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_PCD3D_SM6", "Shader Model 6")
+bSupportsHairStrandGeometry=true
 
 [PreviewPlatform PCD3D_SM6]
 PlatformName=PCD3D_SM6
@@ -194,6 +195,8 @@ bIsHlslcc = false
 bSupportsVariableRateShading = false
 
 NumberOfComputeThreads = 64
+
+bSupportsHairStrandGeometry=true
 
 [ShaderPlatform PCD3D_ES3_1]
 Language=D3D
