--- a/Engine/Plugins/VirtualProduction/CameraCalibration/CameraCalibration.uplugin
+++ b/Engine/Plugins/VirtualProduction/CameraCalibration/CameraCalibration.uplugin
@@ -17,7 +17,7 @@
 		{
 			"Name": "CameraCalibration",
 			"Type": "Runtime",
-			"LoadingPhase": "PostConfigInit"
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "CameraCalibrationEditor",
@@ -26,6 +26,10 @@
 		}
 	],
 	"Plugins": [
+		{
+			"Name": "CameraCalibrationCore",
+			"Enabled": true
+		},
 		{
 			"Name": "LiveLink",
 			"Enabled": true
