[Memory] - Add rhi.DumpResourceMemory command to memreport.
#rb Christopher.Waters
[at]Christopher.Waters
#jira none

#ROBOMERGE-SOURCE: CL 16448167 in //UE5/Private-Frosty/...
#ROBOMERGE-BOT: STARSHIP (Private-Frosty -> Main) (v818-16446889)

[CL 16448224 by jason nadro in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1676,6 +1676,7 @@ bRecompileOnLoad=true
 +Cmd="LogCountedInstances"
 +Cmd="obj list -alphasort"
 +Cmd="rhi.DumpMemory"
++Cmd="rhi.DumpResourceMemory"
 +Cmd="LogOutStatLevels"
 +Cmd="ListSpawnedActors"
 
