--- a/Engine/Source/Programs/Horde/HordeDashboard/public/manifest.json
+++ b/Engine/Source/Programs/Horde/HordeDashboard/public/manifest.json
@@ -3,9 +3,8 @@
   "name": "Horde Dashboard",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon.svg",
+      "type": "image/svg+xml"
     },
     {
       "src": "logo192.png",
