--- a/Engine/Plugins/Media/PixelStreaming/PixelStreaming.uplugin
+++ b/Engine/Plugins/Media/PixelStreaming/PixelStreaming.uplugin
@@ -17,7 +17,7 @@
 	"Modules": [
 		{
 			"Name": "PixelStreaming",
-			"Type": "RuntimeNoCommandlet",
+			"Type": "Runtime",
 			"LoadingPhase": "PostDefault",
 			"WhitelistPlatforms": [ "Win32", "Win64" ],
 			"BlacklistTargets": [ "Server" ]
