SolidWorks - Datasmith plugin - fix toolbar
#jira UE-119483
#lockdown simon.tourangeau
#rb emil.kirichev

[CL 16886592 by emil kirichev in 4.27 branch]

--- a/Engine/Source/Programs/Enterprise/Datasmith/DatasmithSolidworksExporter/DatasmithSolidworks/DatasmithSolidworks.csproj
+++ b/Engine/Source/Programs/Enterprise/Datasmith/DatasmithSolidworksExporter/DatasmithSolidworks/DatasmithSolidworks.csproj
@@ -198,10 +198,10 @@
     <Compile Include="..\..\..\..\..\..\Binaries\Win64\DatasmithFacadeCSharp\Public\*.cs">
       <Link>DatasmithSwigFacade\%(Filename)%(Extension)</Link>
     </Compile>
-    <None Include="ToolbarLarge.bmp" />
-    <None Include="ToolbarSmall.bmp" />
-    <None Include="MainIconLarge.bmp" />
-    <None Include="MainIconSmall.bmp" />
+    <EmbeddedResource Include="ToolbarLarge.bmp" />
+    <EmbeddedResource Include="ToolbarSmall.bmp" />
+    <EmbeddedResource Include="MainIconLarge.bmp" />
+    <EmbeddedResource Include="MainIconSmall.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
