1. Use G8 format for mobile GTAO on Vulkan. 2. Enable mobile AO and PPR on highend mobile devices
#jira UE-119101
#8178

#rb Dmitriy.Dyomin

[CL 16906590 by Wei Liu in ue5-main branch]

--- a/Engine/Config/BaseDeviceProfiles.ini
+++ b/Engine/Config/BaseDeviceProfiles.ini
@@ -405,12 +405,16 @@ DeviceType=IOS
 BaseProfileName=iPhone7
 +CVars=ios.PhysicalScreenDensity=326
 +CVars=sg.ShadowQuality=3
++CVars=r.Mobile.AmbientOcclusionQuality=1
++CVars=r.Mobile.PixelProjectedReflectionQuality=1
 
 [iPhone8Plus DeviceProfile]
 DeviceType=IOS
 BaseProfileName=iPhone7Plus
 +CVars=ios.PhysicalScreenDensity=401
 +CVars=sg.ShadowQuality=3
++CVars=r.Mobile.AmbientOcclusionQuality=1
++CVars=r.Mobile.PixelProjectedReflectionQuality=1
 
 [iPhoneX DeviceProfile]
 DeviceType=IOS
