--- a/Engine/Config/IOS/IOSScalability.ini
+++ b/Engine/Config/IOS/IOSScalability.ini
@@ -98,12 +98,16 @@ r.Tonemapper.Quality=3
 r.BloomQuality=1
 r.DepthOfFieldQuality=0
 r.LightShaftQuality=0
+r.Mobile.AmbientOcclusionQuality=0
+r.Mobile.PixelProjectedReflectionQuality=0
 
 [PostProcessQuality@3]
 r.Tonemapper.Quality=3
 r.BloomQuality=1
 r.DepthOfFieldQuality=1
 r.LightShaftQuality=1
+r.Mobile.AmbientOcclusionQuality=1
+r.Mobile.PixelProjectedReflectionQuality=1
 
 ; ------------------------------------------------------------------------------
 ; Effects settings
