Rework how the virtualization backends are defined.
#rb Per.Larsson
#rnx
#preflight 60f93e100fc49a0001c95bea

- When a package is saved we now push it's payloads to local storage backends (in memory/local file cache etc)
- In a future piece of work, when a package is submitted we will push it's payloads to the persistent storage backends (jupiter/source control etc)
- When pulling a payload we will first search the local storage backends for it and then go to the slower persistent storage backends if it was not found.
-- Once a payload has been found when being pulled we will immediately cache it to the local storage backends so that subsequent pulls will be faster.
-- At some point a ZenStorage backend will be added which will most likely be the primary local storage backend.

[CL 16922588 by paul chipchase in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1057,17 +1057,20 @@ ValidateAfterPushOperation=False
 
 ; A backend graph with no backends
 [ContentVirtualizationBackendGraph_None]
-Hierarchy=()
+LocalStorageHierarchy=()
+PersistentStorageHierarchy=()
 
 ; A simple backend graph that will store virtualized data locally, suitable for testing.
 [ContentVirtualizationBackendGraph_LocalCache]
-Hierarchy=(Entry=LocalCache)
-LocalCache=(Type=FileSystem, Path="%GAMESAVEDDIR%VirtualizedPayloads/")
+LocalStorageHierarchy=(Entry=LocalFileCache)
+PersistentStorageHierarchy=()
+LocalFileCache=(Type=FileSystem, Path="%GAMESAVEDDIR%VirtualizedPayloads/")
 
 ; A backend graph that will connect to a locally hosted Jupiter service along with a local file cache, suitable for testing.
 [ContentVirtualizationBackendGraph_JupiterLocalHost]
-Hierarchy=(Entry=LocalCache, Entry=JupiterCache)
-LocalCache=(Type=FileSystem, Path="%GAMESAVEDDIR%VirtualizedPayloads/")
+LocalStorageHierarchy=(Entry=LocalFileCache)
+PersistentStorageHierarchy=(JupiterCache)
+LocalFileCache=(Type=FileSystem, Path="%GAMESAVEDDIR%VirtualizedPayloads/")
 JupiterCache=(Type=Jupiter, Host="http://localhost", Namespace="ue.mirage", ChunkSize=524288)
 
 [/Script/Engine.StreamingSettings]
