Horde: Change to information level log output by default.
[CL 16933354 by Ben Marsh in ue5-main branch]

--- a/Engine/Source/Programs/Horde/HordeServer/appsettings.json
+++ b/Engine/Source/Programs/Horde/HordeServer/appsettings.json
@@ -12,7 +12,7 @@
 	{
 		"MinimumLevel": 
 		{
-			"Default": "Debug",
+			"Default": "Information",
 			"Override": 
 			{
 				"MongoDB": "Warning", // For bundled MongoDB output
