--- a/Engine/Source/Programs/Horde/HordeServer/appsettings.json
+++ b/Engine/Source/Programs/Horde/HordeServer/appsettings.json
@@ -20,10 +20,7 @@
 				"Microsoft": "Warning",
 				"Microsoft.AspNetCore": "Warning",
 				"Microsoft.Hosting": "Information",
-				"HordeServer.Authentication.OktaHandler": "Warning",
-				"HordeServer.Authentication.OktaViaJwtHandler": "Warning",
-				"HordeServer.Authentication.HordeJwtBearerHandler": "Warning",
-				"HordeServer.Authentication.ServiceAccountAuthHandler": "Warning",
+				"HordeServer.Authentication": "Warning",
 				"System.Net.Http.HttpClient": "Warning",
 				"Grpc": "Warning"
 			}
