- Add support for automatically recording a LensFile to a level sequence when used by a recorded CameraActor
#jira UE-119614
#rb Simon.Therriault, Andrew.Rodham

#ushell-cherrypick of 16849664 by Geoffrey.Douglas

[CL 16938596 by Alejandro Arango in 4.27 branch]

--- a/Engine/Plugins/VirtualProduction/LiveLinkCamera/LiveLinkCamera.uplugin
+++ b/Engine/Plugins/VirtualProduction/LiveLinkCamera/LiveLinkCamera.uplugin
@@ -34,6 +34,11 @@
 			"Name": "LiveLinkCameraEditor",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "LiveLinkCameraRecording",
+			"Type": "UncookedOnly",
+			"LoadingPhase": "Default"
 		}
 	]
 }
