--- a/Engine/Source/Programs/DotNETCommon/BuildUtilities/BuildUtilities.csproj
+++ b/Engine/Source/Programs/DotNETCommon/BuildUtilities/BuildUtilities.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\..\Shared\EpicGames.Core\EpicGames.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.10.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
