Update multiple templates to set the plugins to only be on supported platforms #jira UE-83132 #rb Mitchell.Wilson #lockdown mitchell.wilson
[CL 16967981 by warren drones in 4.27 branch]

--- a/Templates/TP_AEC_CollabBP/TP_AEC_CollabBP.uproject
+++ b/Templates/TP_AEC_CollabBP/TP_AEC_CollabBP.uproject
@@ -7,6 +7,9 @@
 		{
 			"Name": "SunPosition",
 			"Enabled": true
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
 		},
 		{
 			"Name": "DataPrepEditor",
@@ -23,6 +26,9 @@
 		{
 			"Name": "PythonScriptPlugin",
 			"Enabled": true
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
 		},
 		{
 			"Name": "HDRIBackdrop",
@@ -59,16 +65,12 @@
 		},
 		{
 			"Name": "MagicLeapMedia",
-			"Enabled": false,
-			"SupportedTargetPlatforms": [
-				"Lumin"
-			]
+			"Enabled": false
 		},
 		{
 			"Name": "MagicLeap",
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
-				"Lumin",
 				"Mac",
 				"Win64"
 			]
@@ -82,10 +84,7 @@
 			"Enabled": true,
 			"SupportedTargetPlatforms": [
 				"Win32",
-				"Win64",
-				"Linux",
-				"Android",
-				"HoloLens"
+				"Win64"
 			]
 		},
 		{
@@ -93,8 +92,7 @@
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
 				"Win32",
-				"Win64",
-				"Android"
+				"Win64"
 			]
 		},
 		{
@@ -102,9 +100,12 @@
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
 				"Win32",
-				"Win64",
-				"Linux"
+				"Win64"
 			]
 		}
+	],
+	"TargetPlatforms": [
+		"TVOS",
+		"WindowsNoEditor"
 	]
 }
