--- a/Templates/TP_DMXBP/TP_DMXBP.uproject
+++ b/Templates/TP_DMXBP/TP_DMXBP.uproject
@@ -25,8 +25,7 @@
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
 				"Win32",
-				"Win64",
-				"Android"
+				"Win64"
 			]
 		},
 		{
@@ -34,8 +33,7 @@
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
 				"Win32",
-				"Win64",
-				"Linux"
+				"Win64"
 			]
 		}
 	]
