Implements r.Bloom.HalfResolutionFFT=2 for quarter-res FFT Bloom
Original author: Bennett Bernardoni

#rb none
#preflight 60ffbc037f21c90001f29648


#ROBOMERGE-SOURCE: CL 16966794
#ROBOMERGE-BOT: (v838-16927207)

[CL 16970696 by guillaume abadie in ue5-main branch]

--- a/Engine/Config/Linux/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Linux/DataDrivenPlatformInfo.ini
@@ -119,6 +119,7 @@ bRequiresDisableForwardLocalLights = true
 
 bCompileSignalProcessingPipeline = true
 bSupportsGen5TemporalAA=true
+bSupportsFFTBloom=true
 
 ; //#todo-vulkanddpi
 bSupportsPerPixelDBufferMask = false
