--- a/Engine/Config/Mac/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Mac/DataDrivenPlatformInfo.ini
@@ -26,3 +26,4 @@ PlatformGroupName=Desktop
 [ShaderPlatform METAL_SM5]
 bSupportsByteBufferComputeShaders=true
 bSupportsGen5TemporalAA=true
+bSupportsFFTBloom=true
