--- a/Engine/Config/Windows/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Windows/DataDrivenPlatformInfo.ini
@@ -51,6 +51,7 @@ bSupportsVariableRateShading=true
 bSupportsGPUSkinCache=true
 bSupportsGen5TemporalAA=true
 bSupportsHairStrandGeometry=true
+bSupportsFFTBloom=true
 
 [PreviewPlatform PCD3D_SM5]
 PlatformName=PCD3D_SM5
@@ -81,6 +82,7 @@ bSupportsGen5TemporalAA=true
 bSupportsMeshShaders=true
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_PCD3D_SM6", "Shader Model 6")
 bSupportsHairStrandGeometry=true
+bSupportsFFTBloom=true
 
 [PreviewPlatform PCD3D_SM6]
 PlatformName=PCD3D_SM6
@@ -197,6 +199,7 @@ bSupportsVariableRateShading = false
 NumberOfComputeThreads = 64
 
 bSupportsHairStrandGeometry=true
+bSupportsFFTBloom=true
 
 [ShaderPlatform PCD3D_ES3_1]
 Language=D3D
