Enable Lumen on macOS.
- Add a few DataDrivenPlatformInfo ShaderPlatform flags for METAL_SM5.
- Attribute dual-source blending targets.
- Match the RWBuffer type for RWScreenProbeRadianceSHDirectional between the HLSL and C++ code.
- Update PF_FloatRGB buffer format to RG11B10Float.

#rb Daniel.Wright, Richard.Wallis, Lukas.Hermanns
#jira UE-117253
#rnx

[CL 16972126 by will damon in ue5-main branch]

--- a/Engine/Config/Mac/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Mac/DataDrivenPlatformInfo.ini
@@ -24,6 +24,12 @@ bUATClosesAfterLaunch=true
 PlatformGroupName=Desktop
 
 [ShaderPlatform METAL_SM5]
+bSupportsAnisotropicMaterials=true
 bSupportsByteBufferComputeShaders=true
+bSupportsDistanceFields=true
 bSupportsGen5TemporalAA=true
+bSupportsLumenGI=true
+bSupportsSSDIndirect=true
+bSupportsWaveOperations=false
+bSupportsGPUScene=true
 bSupportsFFTBloom=true
