Turn on Material Anisotropic Materials for macOS if the relevant fx quality level also allows it.
#jira UE-119894
#rb will.damon
#rnx
#lockdown cristina.riveron
#robomerge[BOT4] -BOT4-Release-Engine-Staging

[CL 16973550 by Richard Wallis in 4.27 branch]

--- a/Engine/Config/Mac/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Mac/DataDrivenPlatformInfo.ini
@@ -94,3 +94,6 @@ bUsesHostCompiler=true
 bUATClosesAfterLaunch=true
 UBTTargetID=Mac
 PlatformGroupName=Desktop
+
+[ShaderPlatform METAL_SM5]
+bSupportsAnisotropicMaterials=true
