- Add support for 64bit image atomics extension (VK_EXT_shader_image_atomic_int64). - Add CVar (r.Vulkan.Allow64bitShaderAtomics) to forcefully disable 64bit image atomics.  Currently defaults to 0 (until other components are in). - Check driver version for Vulkan on NVIDIA, a fix was added for the 64bit image atomics that is required for Nanite. (currently Windows only, Linux TBD)
#rb Rolando.Caloca
#fyi mihnea.balta,dmitriy.dyomin,brandon.schaefer

[CL 16982971 by jeannoe morissette in ue5-main branch]

--- a/Engine/Config/Windows/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Windows/DataDrivenPlatformInfo.ini
@@ -135,16 +135,13 @@ bSupportsGPUScene = true
 ; //#todo-vulkanddpi
 bSupportsPrimitiveShaders = false
 
-; //#todo-vulkanddpi
-bSupportsUInt64ImageAtomics = false
+bSupportsUInt64ImageAtomics = true
 
 ; //#todo-vulkanddpi
 bRequiresVendorExtensionsForAtomics = false
 
 bSupportsNanite = true
-
-; //#todo-vulkanddpi
-bSupportsLumenGI = false
+bSupportsLumenGI = true
 
 ; //#todo-vulkanddpi
 bSupportsSSDIndirect = false
