Horde: Add common definitions for the ref table, blob store, and cbobject/iohash wrapper types.
[CL 17012437 by Ben Marsh in ue5-main branch]

--- a/Engine/Source/Programs/Shared/EpicGames.Horde/EpicGames.Horde.csproj
+++ b/Engine/Source/Programs/Shared/EpicGames.Horde/EpicGames.Horde.csproj
@@ -41,4 +41,10 @@
     <ProjectReference Include="..\EpicGames.IoHash\EpicGames.IoHash.csproj" />
     <ProjectReference Include="..\EpicGames.Serialization\EpicGames.Serialization.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Protobuf Include="Protos\horde\common\cbobject_wrapper.proto" ProtoRoot="Protos" />
+    <Protobuf Include="Protos\horde\common\iohash_wrapper.proto" ProtoRoot="Protos" />
+    <Protobuf Include="Protos\horde\storage\blob_store.proto" ProtoRoot="Protos" />
+    <Protobuf Include="Protos\horde\storage\ref_table.proto" ProtoRoot="Protos" />
+  </ItemGroup>
 </Project>
